--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.TODO"
         tools:targetApi="30">
         <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -26,11 +29,10 @@
         </activity>
         <activity
             android:name=".AuthorizationActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".RegistrationActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
