added addSectionActivity (not final)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         <activity
             android:name=".RegistrationActivity"
             android:exported="true" />
-
+        <activity
+            android:name=".AddSectionActivity"
+            android:exported="true" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
