--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TODO"
         tools:targetApi="30">
+        <activity android:name=".MainAppActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
