--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TODO"
         tools:targetApi="30">
-        <activity android:name=".view.MainAppActivityView"
+        <activity android:name=".MainAppActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
