--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,6 +35,11 @@ android {
 }
 
 dependencies {
+    def room_version = "2.5.0"
+    // FOR ROOM
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -42,6 +48,8 @@ dependencies {
     implementation 'androidx.databinding:databinding-runtime:7.4.2'
     implementation 'com.google.firebase:firebase-auth:21.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.room:room-common:2.4.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
