--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,16 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:nav_version"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+
+
     }
     repositories {
         mavenCentral()
-        google()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
