added edit pop up menu

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
-    id "androidx.navigation.safeargs"
+    id "androidx.navigation.safeargs.kotlin"
 
 
 }
