--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+        def nav_version = "2.3.4"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
 
     }
