--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,15 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
+    id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
-    namespace 'com.example.todo'
     compileSdk 33
 
     defaultConfig {
         applicationId "com.example.todo"
-        minSdk 27
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -25,13 +25,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            java {
-                srcDirs += 'build/generated/source/navigation-args'
-            }
-        }
-    }
 
     kotlinOptions {
         jvmTarget = '1.8'
@@ -39,29 +32,29 @@ android {
     buildFeatures{
         viewBinding true
     }
+
+    kapt {
+        correctErrorTypes true
+    }
 }
 
 dependencies {
-    def room_version = "2.5.0"
-    // FOR ROOM
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.room:room-ktx:2.2.1'
+    kapt "androidx.room:room-compiler:2.2.1"
 
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.databinding:databinding-runtime:7.4.2'
-    implementation 'com.google.firebase:firebase-auth:21.2.0'
+    implementation 'androidx.databinding:databinding-runtime:8.0.1'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.room:room-common:2.4.2'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.room:room-common:2.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.6.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     apply plugin: 'com.android.application'
     apply plugin: 'kotlin-android'
-    apply plugin: 'kotlin-parcelize'
-    apply plugin: "androidx.navigation.safeargs"
 }
