--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.todo">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/Theme.TODO"
         android:label=""
-        tools:targetApi="30">
-        <activity android:name=".view.MainAppActivity"
+        android:theme="@style/Theme.TODO"
+        tools:targetApi="s">
+        <activity
+            android:name=".view.MainAppActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
